syntax = "proto3";

package rpc;

// The service definition.
service CNIBackend {
    rpc AddNetwork (NetworkRequest) returns (NetworkReply) {
    }
    rpc DelNetwork (NetworkRequest) returns (NetworkReply) {
    }
}

message NetworkRequest {
    string K8S_POD_NAME = 1;
    string K8S_POD_NAMESPACE = 2;
    string K8S_POD_INFRA_CONTAINER_ID = 3;
    string Netns = 4;
    string IfName = 5;
}

message NetworkReply {
    string IPv4Addr = 1;
    string IPv4Subnet = 2;
    int32 RouteTableNum = 3;
    bool Exist = 4;
    string GW = 5;
}